<resources>
    <string name="app_name">MapApp</string>
    <string name="menu_settings">Налаштування</string>
    <string name="title_activity_settings">Налаштування</string>
    <string name="menu_search">Пошук</string>

    <string name="str_atv_places">Пошук</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="increase_precision">Підвищення точності даних</string>
    <string name="history">Історія</string>
    <string name="map_history">Історія карт</string>
    <string name="history_summary">Показати історію пошуків</string>

    <string name="notifications">Сповіщення</string>
    <string name="notification_settings">Налаштування сповіщення</string>

    <string name="enter_place">Введіть ваше місце</string>

    <string name="observation">спостереження</string>
    <string name="ask_observe">Почати спостереження?</string>

    <string name="search_city">Search City</string>
    <string name="search_place">Search Place</string>
    <string name="wifi">Wifi</string>
    <string name="cancel">Cancel</string>
    <string name="noInternet_title">No Internet Connection</string>
    <string name="noInternetmsg">Please connect the Internet</string>
    <string name="mobile_data">Mobile data</string>
    <string name="noInternet_msg">Please turn ON and try again</string>
    <string name="place">Place</string>
    <string name="city">City</string>
    <string name="summary">Радіус: %1$d</string>
    <string name="dialog_title">Радіус, в якому сповіщати про прибуття(у метрах)</string>

    <string name="GPS_ask_toEnable">Використовувати геодані?</string>
    <string name="Location_error">Ви вдже знаходитесь біля цілі!</string>

    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
    <string name="action_settings">action settings</string>
    <string name="GPSAlertDialogMessage">Alert dialog message</string>
    <string name="GPSAlertDialogTitle">Alert dialog title</string>
</resources>
